fix spacing

--- a/11_countdown/project_style.css
+++ b/11_countdown/project_style.css
@@ -3,7 +3,7 @@
 .time-target {
     /* border-left: 2px solid #ffdbb4;
     padding-left: .6rem; */
-    margin-bottom: 1.4rem;
+    margin-bottom: 1rem;
     /* color: #ffdbb4; */
 }
 
@@ -27,6 +27,7 @@
     margin: 0;
     color: #f76d6d;
 }
+
 
 .time-element {
     display: grid;
